--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -159,6 +159,9 @@
   <ItemGroup>
     <ClCompile Include="dllmain.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="interfaces.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
