--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -161,7 +161,7 @@
     <ClCompile Include="Interfaces.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="interfaces.h" />
+    <ClInclude Include="Interfaces.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
