--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -159,6 +159,7 @@
   <ItemGroup>
     <ClCompile Include="dllmain.c" />
     <ClCompile Include="Interfaces.c" />
+    <ClCompile Include="SDK\GameUI.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Interfaces.h" />
