--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -171,6 +171,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.c" />
+    <ClCompile Include="Hooks.c" />
     <ClCompile Include="Interfaces.c" />
     <ClCompile Include="SDK\Engine.c" />
     <ClCompile Include="SDK\GameUI.c" />
