--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -185,6 +185,7 @@
     <ClInclude Include="Memory.h" />
     <ClInclude Include="SDK\Engine.h" />
     <ClInclude Include="SDK\GameUI.h" />
+    <ClInclude Include="SDK\UserCmd.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
