--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Memory.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SDK\EntityList.c">
+      <Filter>SDK</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDK\GameUI.h">
