--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="SDK\EntityList.c">
       <Filter>SDK</Filter>
     </ClCompile>
+    <ClCompile Include="Hacks\Misc.c">
+      <Filter>Hacks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDK\GameUI.h">
