--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -188,6 +188,8 @@
     <ClInclude Include="Interfaces.h" />
     <ClInclude Include="Memory.h" />
     <ClInclude Include="Netvars.h" />
+    <ClInclude Include="nuklear.h" />
+    <ClInclude Include="nuklear_d3d9.h" />
     <ClInclude Include="SDK\Engine.h" />
     <ClInclude Include="SDK\EntityList.h" />
     <ClInclude Include="SDK\GameUI.h" />
