--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -183,6 +183,7 @@
     <ClCompile Include="SDK\GameUI.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GUI.h" />
     <ClInclude Include="Hacks\Misc.h" />
     <ClInclude Include="Hooks.h" />
     <ClInclude Include="Interfaces.h" />
