--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -173,6 +173,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.c" />
+    <ClCompile Include="GUI.cpp" />
     <ClCompile Include="Hacks\Misc.c" />
     <ClCompile Include="Hooks.c" />
     <ClCompile Include="Interfaces.c" />
