--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -72,7 +72,7 @@
     <ClCompile Include="imgui\imgui_widgets.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
-    <ClCompile Include="GUI.c">
+    <ClCompile Include="GUI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
