--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="SDK\GameUI.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Config.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="Hacks\Misc.h" />
     <ClInclude Include="Hooks.h" />
