--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -174,6 +174,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Config.c" />
     <ClCompile Include="dllmain.c" />
     <ClCompile Include="GUI.cpp" />
     <ClCompile Include="Hacks\Misc.c" />
