--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -214,6 +214,7 @@
     <ClInclude Include="SDK\GameUI.h" />
     <ClInclude Include="SDK\Surface.h" />
     <ClInclude Include="SDK\UserCmd.h" />
+    <ClInclude Include="SDK\Utils.h" />
     <ClInclude Include="SDK\Vector.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
