--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -174,6 +174,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="cJSON\cJSON.c" />
     <ClCompile Include="Config.c" />
     <ClCompile Include="dllmain.c" />
     <ClCompile Include="GUI.cpp" />
@@ -194,6 +195,7 @@
     <ClCompile Include="SDK\Surface.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cJSON\cJSON.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="GUI.h" />
     <ClInclude Include="Hacks\Misc.h" />
