--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="cJSON\cJSON.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="GUI.h" />
+    <ClInclude Include="Hacks\Glow.h" />
     <ClInclude Include="Hacks\Misc.h" />
     <ClInclude Include="Hooks.h" />
     <ClInclude Include="imgui\imconfig.h" />
