--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -217,6 +217,7 @@
     <ClInclude Include="Memory.h" />
     <ClInclude Include="Netvars.h" />
     <ClInclude Include="SDK\Engine.h" />
+    <ClInclude Include="SDK\Entity.h" />
     <ClInclude Include="SDK\EntityList.h" />
     <ClInclude Include="SDK\GameUI.h" />
     <ClInclude Include="SDK\GlowObjectDefinition.h" />
