--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -193,6 +193,7 @@
     <ClCompile Include="Memory.c" />
     <ClCompile Include="Netvars.c" />
     <ClCompile Include="SDK\Engine.c" />
+    <ClCompile Include="SDK\Entity.c" />
     <ClCompile Include="SDK\EntityList.c" />
     <ClCompile Include="SDK\GameUI.c" />
     <ClCompile Include="SDK\Surface.c" />
