--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -196,6 +196,7 @@
     <ClCompile Include="SDK\Entity.c" />
     <ClCompile Include="SDK\EntityList.c" />
     <ClCompile Include="SDK\GameUI.c" />
+    <ClCompile Include="SDK\GlobalVars.c" />
     <ClCompile Include="SDK\Surface.c" />
     <ClCompile Include="SDK\Vector.c" />
   </ItemGroup>
