--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClCompile Include="SDK\Entity.c">
       <Filter>SDK</Filter>
     </ClCompile>
+    <ClCompile Include="SDK\GlobalVars.c">
+      <Filter>SDK</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDK\GameUI.h">
