--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -219,6 +219,7 @@
     <ClInclude Include="Memory.h" />
     <ClInclude Include="Netvars.h" />
     <ClInclude Include="SDK\ClassId.h" />
+    <ClInclude Include="SDK\Client.h" />
     <ClInclude Include="SDK\ClientClass.h" />
     <ClInclude Include="SDK\Engine.h" />
     <ClInclude Include="SDK\Entity.h" />
