--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="Interfaces.c" />
     <ClCompile Include="Memory.c" />
     <ClCompile Include="Netvars.c" />
+    <ClCompile Include="SDK\Client.c" />
     <ClCompile Include="SDK\Engine.c" />
     <ClCompile Include="SDK\Entity.c" />
     <ClCompile Include="SDK\EntityList.c" />
