--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -199,6 +199,7 @@
     <ClCompile Include="SDK\GameUI.c" />
     <ClCompile Include="SDK\GlobalVars.c" />
     <ClCompile Include="SDK\Surface.c" />
+    <ClCompile Include="SDK\Utils.c" />
     <ClCompile Include="SDK\Vector.c" />
   </ItemGroup>
   <ItemGroup>
