--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClCompile Include="SDK\Client.c">
       <Filter>SDK</Filter>
     </ClCompile>
+    <ClCompile Include="SDK\Utils.c">
+      <Filter>SDK</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDK\GameUI.h">
