--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -200,5 +200,8 @@
     <ClInclude Include="SDK\Recv.h">
       <Filter>SDK</Filter>
     </ClInclude>
+    <ClInclude Include="SDK\EngineTrace.h">
+      <Filter>SDK</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
