--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -224,6 +224,7 @@
     <ClInclude Include="SDK\Client.h" />
     <ClInclude Include="SDK\ClientClass.h" />
     <ClInclude Include="SDK\Engine.h" />
+    <ClInclude Include="SDK\EngineTrace.h" />
     <ClInclude Include="SDK\Entity.h" />
     <ClInclude Include="SDK\EntityList.h" />
     <ClInclude Include="SDK\GameUI.h" />
