--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -105,6 +105,9 @@
     <ClCompile Include="SDK\EngineTrace.c">
       <Filter>SDK</Filter>
     </ClCompile>
+    <ClCompile Include="Hacks\Triggerbot.c">
+      <Filter>Hacks</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDK\GameUI.h">
