--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -226,6 +226,7 @@
     <ClInclude Include="SDK\ClassId.h" />
     <ClInclude Include="SDK\Client.h" />
     <ClInclude Include="SDK\ClientClass.h" />
+    <ClInclude Include="SDK\Cvar.h" />
     <ClInclude Include="SDK\Engine.h" />
     <ClInclude Include="SDK\EngineTrace.h" />
     <ClInclude Include="SDK\Entity.h" />
