--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="SDK\ConVar.c">
       <Filter>SDK</Filter>
     </ClCompile>
+    <ClCompile Include="SDK\ItemDefinitionIndex.c">
+      <Filter>SDK</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SDK\GameUI.h">
