--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="Config.c" />
     <ClCompile Include="dllmain.c" />
     <ClCompile Include="GUI.cpp" />
+    <ClCompile Include="Hacks\Esp.c" />
     <ClCompile Include="Hacks\Glow.c" />
     <ClCompile Include="Hacks\Misc.c" />
     <ClCompile Include="Hacks\Triggerbot.c" />
