--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -243,6 +243,7 @@
     <ClInclude Include="SDK\GlowObjectDefinition.h" />
     <ClInclude Include="SDK\ItemDefinitionIndex.h" />
     <ClInclude Include="SDK\Matrix3x4.h" />
+    <ClInclude Include="SDK\Panel.h" />
     <ClInclude Include="SDK\Recv.h" />
     <ClInclude Include="SDK\Surface.h" />
     <ClInclude Include="SDK\UserCmd.h" />
