--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="SDK\GlobalVars.c" />
     <ClCompile Include="SDK\GlowObjectDefinition.c" />
     <ClCompile Include="SDK\ItemDefinitionIndex.c" />
+    <ClCompile Include="SDK\Panel.c" />
     <ClCompile Include="SDK\Surface.c" />
     <ClCompile Include="SDK\Utils.c" />
     <ClCompile Include="SDK\Vector.c" />
