--- a/Anubis/Anubis.vcxproj.filters
+++ b/Anubis/Anubis.vcxproj.filters
@@ -250,5 +250,8 @@
     <ClInclude Include="SDK\Panel.h">
       <Filter>SDK</Filter>
     </ClInclude>
+    <ClInclude Include="SDK\DebugOverlay.h">
+      <Filter>SDK</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
