--- a/Anubis/Anubis.vcxproj
+++ b/Anubis/Anubis.vcxproj
@@ -245,6 +245,7 @@
     <ClInclude Include="SDK\GlobalVars.h" />
     <ClInclude Include="SDK\GlowObjectDefinition.h" />
     <ClInclude Include="SDK\ItemDefinitionIndex.h" />
+    <ClInclude Include="SDK\Localize.h" />
     <ClInclude Include="SDK\Matrix3x4.h" />
     <ClInclude Include="SDK\Panel.h" />
     <ClInclude Include="SDK\Recv.h" />
